fixed mainHome anim timing, content page footer layout, js- btn visibilty issue

--- a/src/sass/abstract/_anim.scss
+++ b/src/sass/abstract/_anim.scss
@@ -21,11 +21,11 @@
 @keyframes slideToLeft {
 	0% {
 		opacity: 0;
-		transform: translateX(5rem);
+		transform: translateX(100vw);
 	}
 
 	80% {
-		transform: translateX(-1.6rem);
+		transform: translateX(-20vw);
 	}
 
 	100% {
