--- a/src/sass/layout/_mainHome.scss
+++ b/src/sass/layout/_mainHome.scss
@@ -24,7 +24,7 @@
 		// MAINHOME MAIN SECTION animation
 		&--anim{
 			animation-name: slideToLeft;
-			animation-duration: 1.3s;
+			animation-duration: 2s;
 			animation-delay: .5s;
 			animation-timing-function: linear;
 		}
